--- a/public/field-mapper.html
+++ b/public/field-mapper.html
@@ -77,8 +77,10 @@
       .controls-section {
         background: white;
         border-radius: 12px;
-        padding: 25px;
+        padding: 20px;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        overflow-y: auto;
+        max-height: calc(100vh - 100px);
       }
 
       .field-list {
@@ -124,18 +126,18 @@
       }
 
       .control-group label {
-        font-size: 0.85rem;
+        font-size: 0.8rem;
         font-weight: 600;
         color: #666;
-        margin-bottom: 4px;
+        margin-bottom: 3px;
       }
 
       .control-group input,
       .control-group select {
-        padding: 8px;
+        padding: 6px 10px;
         border: 1px solid #ddd;
         border-radius: 6px;
-        font-size: 0.95rem;
+        font-size: 0.85rem;
       }
 
       .control-group input:focus,
@@ -220,14 +222,21 @@
       }
 
       .action-buttons {
-        display: flex;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
         gap: 10px;
         margin-top: 20px;
       }
 
+      .action-buttons .btn {
+        width: 100%;
+        padding: 12px;
+        font-size: 0.95rem;
+      }
+
       .btn-back {
         background: #6c757d;
-        flex: 1;
+        grid-column: 1 / -1;
       }
 
       .btn-back:hover {
@@ -236,6 +245,78 @@
 
       .btn-save {
         flex: 2;
+      }
+
+      /* Modal Styles */
+      .modal {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.8);
+        z-index: 1000;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 20px;
+      }
+
+      .modal-content {
+        background: white;
+        border-radius: 12px;
+        max-width: 900px;
+        width: 100%;
+        max-height: 90vh;
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+      }
+
+      .modal-header {
+        padding: 20px 25px;
+        border-bottom: 2px solid #e0e0e0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      .modal-header h3 {
+        margin: 0;
+        color: #667eea;
+      }
+
+      .btn-close-modal {
+        background: #dc3545;
+        color: white;
+        border: none;
+        border-radius: 50%;
+        width: 32px;
+        height: 32px;
+        font-size: 16px;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: all 0.3s ease;
+      }
+
+      .btn-close-modal:hover {
+        background: #c82333;
+        transform: scale(1.1);
+      }
+
+      .modal-body {
+        padding: 25px;
+        overflow-y: auto;
+        flex: 1;
+      }
+
+      .modal-footer {
+        padding: 20px 25px;
+        border-top: 2px solid #e0e0e0;
+        text-align: right;
       }
     </style>
   </head>
@@ -351,12 +432,62 @@
           <div class="action-buttons">
             <a href="/" class="btn btn-back">← Back</a>
             <button
+              id="generatePreviewBtn"
+              class="btn btn-secondary"
+              style="flex: 1"
+            >
+              👁️ Preview PDF
+            </button>
+            <button
               id="saveTemplateWithFields"
               class="btn btn-primary btn-save"
             >
               💾 Save Template
             </button>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Preview Modal -->
+    <div id="previewModal" class="modal" style="display: none">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3>📄 Certificate Preview</h3>
+          <button class="btn-close-modal" onclick="closePreviewModal()">
+            ✖
+          </button>
+        </div>
+        <div class="modal-body">
+          <div
+            id="previewCanvasContainer"
+            style="text-align: center; max-height: 70vh; overflow: auto"
+          >
+            <canvas
+              id="previewCanvas"
+              style="
+                max-width: 100%;
+                border: 1px solid #ddd;
+                border-radius: 8px;
+              "
+            ></canvas>
+          </div>
+          <p
+            style="
+              text-align: center;
+              color: #666;
+              margin-top: 15px;
+              font-size: 0.9rem;
+            "
+          >
+            Preview shows how the certificate will look with data from the first
+            CSV row
+          </p>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-secondary" onclick="closePreviewModal()">
+            Close
+          </button>
         </div>
       </div>
     </div>
