feat: Add deployment warning for non-localhost environments and enhance logging for metadata handling

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,29 @@
       <header>
         <h1>📜 Certificate Generator</h1>
         <p class="subtitle">Generate professional certificates in bulk</p>
+
+        <!-- Deployment Warning -->
+        <div
+          id="deploymentWarning"
+          style="
+            display: none;
+            background: #fff3cd;
+            border-left: 4px solid #ffc107;
+            padding: 12px 15px;
+            margin: 15px 0;
+            border-radius: 6px;
+          "
+        >
+          <strong>⚠️ Storage Notice:</strong> Uploaded templates and mappings
+          are stored temporarily.
+          <a
+            href="/DEPLOYMENT.md"
+            target="_blank"
+            style="color: #856404; text-decoration: underline"
+            >Read deployment guide</a
+          >
+          for production setup.
+        </div>
       </header>
 
       <div class="main-content">
